# agent-workflow

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: index.html  styles.css
examples/: README.md  __init__.py  document_pipeline.py  simple_chain.py  simple_evaluator.py  simple_parallel.py  simple_routing.py
framework/: __init__.py  base.py  chaining.py  evaluator.py  exceptions.py  logging_config.py  orchestrator.py  parallel.py  routing.py
framework/providers/: __init__.py  gemini.py
tests/: README.md  __init__.py  test_base.py  test_chaining.py  test_evaluator.py  test_exceptions.py  test_gemini_provider.py  test_orchestrator.py  test_parallel.py  test_routing.py
